<resources>
    <string name="app_name">APP-Demo</string>
    <string name="set1">DEMO1</string>
    <string name="set2">DEMO2</string>
    <string name="set3">DEMO3</string>
    <string name="set4">DEMO4</string>
    <string name="button_label_enabled">ButtonEnabled</string>
    <string name="button_label_disable">ButtonDisabled</string>
    <string name="UnelevatedButton">UnelevatedButton</string>
    <string name="Button">Button</string>
    <string name="OutlinedButton">OutlinedButton</string>
    <string name="text_button_label_enabled">TextButton</string>
    <string name="TextButtonIcon">TextButtonIcon</string>
    <string name="txt_amazon">Amozan</string>
    <string name="CreateOrder">Create Order</string>
    <string name="jsync_coffee">jSYNC Coffee</string>

    <string name="summary_account_settings">Edit account settings</string>
    <string name="title_account_settings">My Account</string>
    <string name="key_account_settings">key_account_settings</string>

    <string name="key_gallery_name">key_gallery_name</string>
    <string name="default_storage">My Notes</string>
    <string name="title_gallery_storage">Default Storage</string>

    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="summary_upload_over_wifi">Upload the notes when wifi is available</string>
    <string name="title_auto_upload">Auto upload</string>

    <string name="title_backup_frequency">Data Backup Frequency</string>
    <string name="key_backup_frequency">key_backup_frequency</string>
    <string name="summary_backup_frequency">If wifi is not available, how often do you want to backup your data?</string>
    <string name="pref_title_storage">Storage</string>

    <string name="pref_title_notifications">Notifications</string>
    <string name="key_notifications_new_message">notifications_new_message</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_title_ringtone">Ringtone</string>

    <string name="key_vibrate">key_vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="title_vibrate">Vibrate</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">At Pluralsight we\'re a team of dedicated authors aiming to make tech skills easier to keep up with.</string>
    <string name="app_version">5.5</string>
    <string name="title_version">Version</string>

    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_support">Questions? Concerns? Send us feedback!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="my_url_support">https://github.com/manit123001</string>

    <string name="summary_faq">View frequently asked questions</string>
    <string name="title_faq">FAQ</string>

    <string name="url_faq">https://github.com/manit123001</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://github.com/manit123001</string>

    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://github.com/manit123001</string>
    <string name="text_menu_setting">Settings</string>
    <string name="movies_categories_key">categoriesKey</string>

</resources>
