<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_looks_one_black_24dp"
            android:title="@string/set1" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_looks_two_black_24dp"
            android:title="@string/set2" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_looks_3_black_24dp"
            android:title="@string/set3" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_looks_4_black_24dp"
            android:title="@string/set4" />
    </group>
</menu>